apps/homeassistant-proxy/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant
  namespace: homeassistant
subsets:
  - addresses:
      - ip: 192.168.1.117
    ports:
      - port: 8123
