apps/homeassistant-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  clusterIP: None
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
